@@ -20,7 +20,6 @@ import ru.yandex.practicum.filmorate.storage.genre.GenreStorage;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
@@ -146,6 +145,11 @@ public class FilmService {
         return updatedFilm;
     }
 
+    public void removeFilmById(Long filmId) {
+        Film film = findFilm(filmId);
+        filmStorage.removeFilmById(film.getId());
+    }
+
     public Film addLike(final Long filmId, final Long userId) {
         userService.findUser(userId);
         Film film = findFilm(filmId);
@@ -162,16 +166,14 @@ public class FilmService {
         return film;
     }
 
-    public Collection<Film> findTopPopular(final Long topCount) {
+    public Collection<Film> findTopPopular(final Long topCount, Long genreId, Integer year) {
         if (topCount < 1) {
             throw new ValidationException("The 'count' value must be greater than 0, " + topCount + " given");
         }
 
-        return filmStorage.getAllLikes().entrySet().stream()
-                .sorted((v1, v2) -> Integer.compare(v1.getValue().size(), v2.getValue().size()) * -1)
-                .limit(topCount)
-                .map(v -> findFilm(v.getKey()))
-                .collect(Collectors.toList());
+        return filmStorage.getAllLikes(topCount, genreId, year).stream()
+                .map(FilmMapper::modelFromDto)
+                .toList();
     }
 
     public Collection<Film> findFilmsByDirector(final Long directorId, final String sortBy) {
